force-app/main/default/objects/Lead/fields/AdminDecision__c.field-meta.xml
<CustomField>
    <fullName>AdminDecision__c</fullName>
    <label>Décision Admin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Approuvé</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rejeté</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>