force-app/main/default/objects/Lead/fields/AIReason__c.field-meta.xml
<CustomField>
    <fullName>AIReason__c</fullName>
    <label>Analyse IA</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>