force-app/main/default/objects/Lead/fields/AIScore__c.field-meta.xml
<CustomField>
    <fullName>AIScore__c</fullName>
    <label>Score IA</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>