force-app/main/default/objects/Lead/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <label>Intention d&apos;achat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Purchase</fullName>
                <label>Achat en gros (B2B)</label>
            </value>
            <value>
                <fullName>Single Purchase</fullName>
                <label>Achat unique</label>
            </value>
            <value>
                <fullName>Partnership</fullName>
                <label>Partenariat</label>
            </value>
            <value>
                <fullName>Product Demo</fullName>
                <label>Démonstration produit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>