force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <formula>
IF(ISNULL(NumberOfEmployees), 0,
  IF(NumberOfEmployees &gt;= 1000, 30,
    IF(NumberOfEmployees &gt;= 200, 25,
      IF(NumberOfEmployees &gt;= 51, 15,
        IF(NumberOfEmployees &gt;= 11, 10, 5)
      )
    )
  )
) +
IF(NOT(ISPICKVAL(Industry, "")), 15, 0) +
IF(NOT(ISBLANK(Phone)), 10, 0) +
IF(NOT(ISBLANK(Title)), 15, 0) +
IF(
  AND(
    NOT(ISBLANK(Email)),
    NOT(OR(
      CONTAINS(Email, 'gmail.com'),
      CONTAINS(Email, 'yahoo.com'),
      CONTAINS(Email, 'hotmail.com'),
      CONTAINS(Email, 'outlook.com')
    ))
  ), 20, 0
)
    </formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>